package DesiginPatternHomework.AbstractFactory;

public interface Cola {

    void pour();

    String getDescription();

}
