package DesiginPatternHomework.AbstractFactory;

public interface Hamburger {

    void make();

    String getDescription();

}
