@startuml Abstract Factory Pattern

title 抽象工厂模式 - 快餐店

interface Hamburger {
    + make(): void
}

interface Cola {
    + produce(): void
}

abstract class AbstractFastFoodFactory {
    + {abstract} createHamburger(): Hamburger
    + {abstract} createCola(): Cola
}

class McDonaldsHamburger {
    + make(): void
}

class McDonaldsCola {
    + produce(): void
}

class KFCHamburger {
    + make(): void
}

class KFCCola {
    + produce(): void
}

class McDonaldsFactory {
    + createHamburger(): Hamburger
    + createCola(): Cola
}

class KFCFactory {
    + createHamburger(): Hamburger
    + createCola(): Cola
}

class FastFoodOrder {
    - hamburger: Hamburger
    - cola: Cola
    + FastFoodOrder(factory: AbstractFastFoodFactory)
    + order(): void
}

Hamburger <|.. McDonaldsHamburger
Hamburger <|.. KFCHamburger
Cola <|.. McDonaldsCola
Cola <|.. KFCCola

AbstractFastFoodFactory <|-- McDonaldsFactory
AbstractFastFoodFactory <|-- KFCFactory

McDonaldsFactory ..> McDonaldsHamburger : creates
McDonaldsFactory ..> McDonaldsCola : creates
KFCFactory ..> KFCHamburger : creates
KFCFactory ..> KFCCola : creates

FastFoodOrder o-- Hamburger
FastFoodOrder o-- Cola
FastFoodOrder ..> AbstractFastFoodFactory : uses

@enduml
